--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+    <form>
+        <fieldset>
+            <label>Enter a number:</label>
+            <br>
+            <input>
+            <button></button>
+        </fieldset>
+    </form>
+
     <script src="script.js"></script>
 </body>
 </html>
