Add text to button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <label>Enter a number:</label>
             <br>
             <input>
-            <button></button>
+            <button>Convert</button>
         </fieldset>
     </form>
 
