Add div and id to elements

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <fieldset>
             <label>Enter a number:</label>
             <br>
-            <input>
-            <button>Convert</button>
+            <input type="number" id="number">
+            <button id="convert-btn">Convert</button>
         </fieldset>
     </form>
-
+    <div id="output"></div>
     <script src="script.js"></script>
 </body>
 </html>
