--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <form>
-        <fieldset>
-            <label>Enter a number:</label>
-            <br>
-            <input type="number" id="number">
-            <button id="convert-btn">Convert</button>
-        </fieldset>
-    </form>
+    <div class="container">
+        <label>Enter a number:</label>
+        <br>
+        <input type="number" id="number">
+        <button id="convert-btn">Convert</button>
+    </div>
     <div id="output"></div>
     <script src="script.js"></script>
 </body>
