Refactor styles and some HTML

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
+    <h1>ROMAN NUMERAL CONTAINER</h1>
     <div class="container">
         <label>Enter a number:</label>
         <br>
-        <input type="number" id="number">
+        <input 
+            value = ""
+            placeholder=""
+            type="number" 
+            id="number"
+            />
         <button id="convert-btn">Convert</button>
     </div>
     <div id="output"></div>
