--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <h1>ROMAN NUMERAL CONTAINER</h1>
+    <h1>ROMAN NUMERAL CONVERTER</h1>
     <div class="container">
         <label>Enter a number:</label>
         <br>
