--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roman Numeral Converter</title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>ROMAN NUMERAL CONVERTER</h1>
     <div class="container">
-        <label>Enter a number:</label>
-        <br>
-        <input 
-            value = ""
-            placeholder=""
-            type="number" 
-            id="number"
-            />
-        <button id="convert-btn">Convert</button>
+      <label>Enter a number:</label>
+      <br />
+      <input value="" placeholder="" type="number" id="number" />
+      <button id="convert-btn">Convert</button>
     </div>
     <div id="output"></div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
